--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cucumberautocomplete.steps": ["frontend/specs/steps/**/*.ts"]
+    "cucumberautocomplete.steps": ["frontend/specs/steps/**/*.ts"],
+    "editor.codeActionsOnSave": {
+        "source.fixAll": "explicit"
+      }
 }
