--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,12 @@
 {
     "name": "Quizmaster Java Dev Environment",
-    "image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
-    "features": {
-        "ghcr.io/devcontainers/features/sshd:1": {
-            "version": "latest"
-        },
-        "ghcr.io/devcontainers/features/java:1": {
-            "version": "21"
-        },
-        "ghcr.io/itsmechlark/features/postgresql:1": {
-            "version": "16"
-        }
-    },
-    // runs as user vscode on /workspaces/quizmaster
-    "postCreateCommand": "./.devcontainer/post_create.sh",
-    "postStartCommand": "sudo service postgresql start",
+    "image": "ghcr.io/scrumdojo/quizmaster-dev:v1",
     "forwardPorts": [
+        2222,  // SSH
         3333,  // Playwright UI
         5173,  // Vite dev server
-        5432   // PostgreSQL server
+        5432,  // PostgreSQL server
+        8080   // Spring Boot server
     ],
     "customizations": {
         "vscode": {
