chore: Starting services post start of dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "name": "Quizmaster Java Dev Environment",
     "image": "ghcr.io/scrumdojo/quizmaster-dev:v1",
+    "postStartCommand": "/usr/local/bin/services.sh",
     "forwardPorts": [
         2222,  // SSH
         3333,  // Playwright UI
