--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,56 +4,38 @@ on:
   push:
     branches:
       - master
+      - unified-container
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
-
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-        ports:
-          - 5432:5432
+    runs-on: ubuntu-24.04
+    container:
+      image: ghcr.io/scrumdojo/quizmaster-dev:v1
 
     steps:
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Create quizmaster database
-        run: psql -U postgres -h localhost -f backend/create_db.sql
-        env:
-          PGPASSWORD: postgres
 
       - name: Grant execute permission for gradlew
         run: chmod +x backend/gradlew
 
-      - name: Install Node.js, pnpm, dependencies and Playwright
-        working-directory: backend
-        run: ./gradlew installFrontend
+      - name: Install frontend dependencies and Playwright
+        working-directory: frontend
+        run: pnpm ci:install
 
-      - name: Lint & format frontend
-        working-directory: backend
-        run: ./gradlew checkFrontend
+      - name: Type check & lint & format frontend
+        working-directory: frontend
+        run: pnpm ci:code
+
+      - name: Build frontend
+        working-directory: frontend
+        run: pnpm ci:build
 
       - name: Run backend tests
         working-directory: backend
         run: ./gradlew test
 
       - name: Run end-to-end tests
-        working-directory: backend
-        run: ./gradlew testE2E
+        working-directory: frontend
+        run: pnpm ci:test:e2e
