--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,21 @@
     "scripts": {
         "playwright:install": "playwright install --with-deps",
         "dev": "vite",
-        "build": "tsc -b && vite build",
-        "check": "tsc -b && biome ci",
-        "format": "biome format --write",
-        "lint": "biome lint",
-        "lint:fix": "biome lint --fix",
-        "style": "pnpm run lint:fix && pnpm run format",
-        "preview": "vite preview",
+        "build": "vite build",
+
+        "code:tsc": "tsc --noEmit",
+        "code:lint": "biome lint --fix",
+        "code:format": "biome format --write",
+        "code": "pnpm code:tsc && pnpm code:lint && pnpm code:format",
+
         "test:e2e": "bddgen && wait-on tcp:8080 && playwright test",
         "test:e2e:vite": "bddgen && wait-on tcp:5173 && cross-env FE_PORT=5173 playwright test",
-        "test:e2e:ui": "bddgen && wait-on tcp:5173 && cross-env FE_PORT=5173 playwright test --ui-host=localhost --ui-port=3333"
+        "test:e2e:ui": "bddgen && wait-on tcp:5173 && cross-env FE_PORT=5173 playwright test --ui-host=localhost --ui-port=3333",
+
+        "ci:install": "pnpm install && pnpm playwright:install",
+        "ci:code": "tsc -b && biome ci",
+        "ci:build": "pnpm build",
+        "ci:test:e2e": "concurrently \"../backend/gradlew bootRun\" \"pnpm test:e2e\""
     },
     "dependencies": {
         "react": "19.0.0",
