--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
       options: --user vscode
 
     steps:
+      - name: Start PostgreSQL
+        run: /usr/local/bin/services.sh
+
       - name: Checkout code
         uses: actions/checkout@v4
 
