--- a/backend/composer.json
+++ b/backend/composer.json
@@ -71,5 +71,8 @@
             "allow-contrib": false,
             "require": "7.2.*"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.5"
     }
 }
