--- a/backend/composer.json
+++ b/backend/composer.json
@@ -73,6 +73,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.5"
+        "phpunit/phpunit": "^11.5",
+        "symfony/maker-bundle": "^1.62"
     }
 }
