--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install backend dependencies
         working-directory: backend
-        run: compose update
+        run: composer update
 
       - name: Type check & lint & format frontend
         working-directory: frontend
