--- a/frontend/package.json5
+++ b/frontend/package.json5
@@ -26,7 +26,7 @@
         "ci:code": "tsc -b && biome ci",
         "ci:build": "pnpm build && cd ../backend && ./gradlew build",
         "ci:bootrun": "cd ../backend && ./gradlew bootRun",
-        "ci:test:e2e": "start-server-and-test ci:bootrun 8080 test:e2e"
+        "ci:test:e2e": "start-server-and-test 'pnpm ci:bootrun' 8080 'pnpm test:e2e'"
     },
     "dependencies": {
         "react": "19.0.0",
