--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ frontend/node_modules/
 frontend/test-results
 frontend/tsconfig.app.tsbuildinfo
 frontend/tsconfig.node.tsbuildinfo
+frontend/.vite
