chore: Added test code coverage report using C8

--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -19,6 +19,7 @@
     "include": [
         "vite.config.ts",
         "playwright.config.ts",
-        "specs/**/*.ts"
+        "specs/**/*.ts",
+        "specs/coverage/report.js"
     ]
 }
