--- a/frontend/package.json5
+++ b/frontend/package.json5
@@ -19,7 +19,8 @@
         "test:e2e:ui": "concurrently 'pnpm test:e2e:watch' 'pnpm playwright:ui'",
 
         "coverage:clean": "rm -rf coverage",
-        "coverage:test:e2e": "pnpm coverage:clean && cross-env ENABLE_COVERAGE=1 pnpm test:e2e",
+        "coverage:test:e2e": "pnpm coverage:clean && c8 --experimental-monocart cross-env ENABLE_COVERAGE=1 pnpm test:e2e",
+        "coverage:report": "node specs/coverage/report.js",
 
         "ci:install": "pnpm install && playwright install --with-deps",
         "ci:code": "tsc -b && biome ci",
@@ -41,6 +42,7 @@
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
         "@vitejs/plugin-react": "4.3.4",
+        "c8": "10.1.3",
         "chokidar-cli": "3.0.0",
         "concurrently": "9.1.2",
         "cross-env": "7.0.3",
