--- a/frontend/package.json5
+++ b/frontend/package.json5
@@ -12,11 +12,11 @@
         "code:format": "biome format --write",
         "code": "pnpm code:tsc && pnpm code:lint && pnpm code:format",
 
-        "test:e2e": "bddgen && wait-on tcp:8080 && playwright test",
-        "test:e2e:vite": "bddgen && wait-on tcp:5173 && cross-env FE_PORT=5173 playwright test",
+        "test:playwright": "bddgen && cross-var wait-on tcp:$FE_PORT && playwright test",
+        "test:e2e": "cross-env FE_PORT=8080 pnpm test:playwright",
+        "test:e2e:vite": "cross-env FE_PORT=5173 pnpm test:playwright",
         "test:e2e:watch": "chokidar specs/**/*.feature -c bddgen",
-        "playwright:ui": "bddgen && wait-on tcp:5173 && cross-env FE_PORT=5173 playwright test --ui-host=0.0.0.0 --ui-port=3333",
-        "test:e2e:ui": "concurrently 'pnpm test:e2e:watch' 'pnpm playwright:ui'",
+        "test:e2e:ui": "concurrently 'pnpm test:e2e:watch' 'pnpm test:e2e:vite --ui-host=0.0.0.0 --ui-port=3333'",
 
         "coverage:clean": "rm -rf coverage",
         "coverage:test:e2e": "pnpm coverage:clean && c8 --experimental-monocart cross-env ENABLE_COVERAGE=1 pnpm test:e2e",
@@ -45,6 +45,7 @@
         "c8": "10.1.3",
         "chokidar-cli": "3.0.0",
         "concurrently": "9.1.2",
+        "cross-var": "1.1.0",
         "cross-env": "7.0.3",
         "esbuild-register": "3.6.0",
         "monocart-coverage-reports": "2.12.6",
