--- a/frontend/package.json5
+++ b/frontend/package.json5
@@ -35,26 +35,37 @@
         "react-router-dom": "7.1.5"
     },
     "devDependencies": {
-        "@biomejs/biome": "1.9.4",
-        "@cucumber/cucumber": "11.1.0",
-        "@playwright/test": "1.49.0",
+        // Types
         "@types/node": "22.10.1",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
+        "typescript": "5.7.2",
+
+        // Linting + formatting
+        "@biomejs/biome": "1.9.4",
+
+        // Bundler
+        "vite": "6.0.2",
         "@vitejs/plugin-react": "4.3.4",
+        "vite-tsconfig-paths": "5.1.3",
+        "esbuild-register": "3.6.0",
+        "sass": "1.82.0",
+
+        // BDD
+        "@cucumber/cucumber": "11.1.0",
+        "@playwright/test": "1.49.0",
+        "playwright-bdd": "8.2.0",
+        "start-server-and-test": "2.0.11",
+
+        // Coverage
+        "monocart-coverage-reports": "2.12.6",
         "c8": "10.1.3",
+
+        // Shell utils
         "chokidar-cli": "3.0.0",
         "concurrently": "9.1.2",
         "cross-var": "1.1.0",
         "cross-env": "7.0.3",
-        "esbuild-register": "3.6.0",
-        "monocart-coverage-reports": "2.12.6",
-        "playwright-bdd": "8.2.0",
-        "sass": "1.82.0",
-        "start-server-and-test": "2.0.11",
-        "typescript": "5.7.2",
-        "vite": "6.0.2",
-        "vite-tsconfig-paths": "5.1.3",
-        "wait-on": "8.0.1"
+        "wait-on": "8.0.1",
     }
 }
