docs: Generate HTML docs from Gherkin specs w/ screenshots

--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -10,6 +10,7 @@
         "isolatedModules": true,
         "moduleDetection": "force",
         "noEmit": true,
+        "jsx": "react-jsx",
 
         "strict": true,
         "noUnusedLocals": true,
@@ -20,6 +21,7 @@
         "vite.config.ts",
         "playwright.config.ts",
         "specs/**/*.ts",
+        "specs/**/*.tsx",
         "specs/coverage/report.js"
     ]
 }
