--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ backend/src/main/resources/static/
 
 frontend/.features-gen
 frontend/coverage/
+frontend/docs/screenshots/
+frontend/docs/*.html
 frontend/node/
 frontend/node_modules/
 frontend/test-results
