--- a/frontend/package.json5
+++ b/frontend/package.json5
@@ -18,6 +18,8 @@
         "test:e2e:watch": "chokidar specs/**/*.feature -c bddgen",
         "test:e2e:ui": "concurrently 'pnpm test:e2e:watch' 'pnpm test:e2e:vite --ui-host=0.0.0.0 --ui-port=3333'",
 
+        "doc:gen": "node --require esbuild-register specs/doc-gen/doc-gen.ts",
+
         "coverage:clean": "rm -rf coverage",
         "coverage:test:e2e": "pnpm coverage:clean && c8 --experimental-monocart cross-env ENABLE_COVERAGE=1 pnpm test:e2e",
         "coverage:report": "node specs/coverage/report.js",
@@ -60,6 +62,11 @@
         // Coverage
         "monocart-coverage-reports": "2.12.6",
         "c8": "10.1.3",
+
+        // Living docs
+        "@cucumber/gherkin" : "32.1.2",
+        "@cucumber/messages" : "27.2.0",
+        "react-markdown": "10.1.0",
 
         // Shell utils
         "chokidar-cli": "3.0.0",
