--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,13 @@ backend/src/main/resources/static/
 
 frontend/.features-gen
 frontend/coverage/
-frontend/docs/screenshots/
-frontend/docs/*.html
 frontend/node/
 frontend/node_modules/
 frontend/test-results
 frontend/tsconfig.app.tsbuildinfo
 frontend/tsconfig.node.tsbuildinfo
 frontend/.vite
+
+site/coverage/
+site/docs/screenshots/
+site/docs/*.html
