--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cucumberautocomplete.steps": ["frontend/specs/steps/**/*.ts"],
     "editor.codeActionsOnSave": {
         "source.fixAll": "explicit"
-      }
+      },
+      "java.compile.nullAnalysis.mode": "automatic"
 }
